# funkysnakes

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  architecture_concepts.md  plan.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
include/actor-core/: README.md  actor.hpp  effect_handler.hpp  input_source.hpp  processor_interface.hpp  publisher.hpp  subscription.hpp  topic.hpp  topic_publisher.hpp  topic_subscription.hpp
include/actor-core/timer/: asio_timer_core.hpp  timer.hpp  timer_core.hpp  timer_factory.hpp
include/snake/: actor.hpp  calculator_actor.hpp  clock.hpp  clock_sink.hpp  control_messages.hpp  direction_command_filter.hpp  food_operations.hpp  functional_utils.hpp  game_engine.hpp  game_engine_actor.hpp  game_engine_sink.hpp  game_manager.hpp  game_manager_actor.hpp  game_manager_sink.hpp  game_messages.hpp  game_session.hpp  game_session_sink.hpp  game_state_lenses.hpp  game_state_views.hpp  game_types.hpp  generic_lens.hpp  generic_view.hpp  input_actor.hpp  input_actor_sink.hpp  key.hpp  logger.hpp  message_processor_interface.hpp  message_sink.hpp  messages.hpp  process_helpers.hpp  processor_interface.hpp  renderer.hpp  renderer_actor.hpp  renderer_sink.hpp  result_actor.hpp  result_sink.hpp  snake_model.hpp  snake_operations.hpp  state_with_effect.hpp  stdin_reader.hpp  (+4 more)
include/snake/timer/: asio_timer_core.hpp  timer.hpp  timer_core.hpp  timer_factory.hpp
src/: calculator_actor.cpp  clock.cpp  direction_command_filter.cpp  food_operations.cpp  game_engine.cpp  game_engine_actor.cpp  game_manager.cpp  game_manager_actor.cpp  game_session.cpp  input_actor.cpp  logger.cpp  main.cpp  renderer.cpp  renderer_actor.cpp  result_actor.cpp  snake_model.cpp  snake_operations.cpp  stdin_reader.cpp  utility.cpp
src/actor-core/timer/: asio_timer_core.cpp
src/timer/: asio_timer_core.cpp
tests/: mock_actors.hpp  mock_result_sink.hpp  test_actors.cpp  test_generic_lens.cpp
